tests/format/misc/errors/js/explicit-resource-management/invalid-using-binding-await.js
{
  using x, await = h();
}
{
  for (using await of []);
}
